--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      </Header>
 
     <!-- Main Content -->
-     <main>
+     <main class="main-width">
         <!-- Luas -->
         <section>
             <header>
