--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
                 <div>
                     <label for="luas">Luas:</label>
+                    <p id="errorLuas" style="color: red;"></p>
                     <input type="text" class="display" id="luas" disabled>
                 </div>
              </form>
@@ -106,6 +107,7 @@
 
                 <div>
                     <label for="keliling">Keliling:</label>
+                    <p id="errorKeliling" style="color: red;"></p>
                     <input type="text" class="display" id="keliling" disabled>
                 </div>
              </form>
