--- a/jajargenjang.html
+++ b/jajargenjang.html
@@ -61,6 +61,7 @@
 
                 <div>
                     <label for="luas-jg">Luas:</label>
+                    <p id="errorLuasJG" style="color: red;"></p>
                     <input type="text" class="display" id="luas-jg" disabled>
                 </div>
              </form>
@@ -101,6 +102,7 @@
 
                 <div>
                     <label for="keliling-jg">Keliling:</label>
+                    <p id="errorKelilingJG" style="color: red;"></p>
                     <input type="text" class="display" id="keliling-jg" disabled>
                 </div>
              </form>
@@ -111,7 +113,7 @@
      <footer>
         <p>&copy; 2025 AntaniaHan. All rights reserved</p>
      </footer>
-     <script src="js/script.js" defer></script>
+     <script src="js/script.js"></script>
 </body>
 
 </html>
