--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     <!-- Footer Content -->
      <footer>
-        <p>&copy; 2025 AntaniaHan. All rights reserved</p>
+        <p>&copy; 2025 AntaniaHan. All rights reserved.</p>
      </footer>
      <script src="js/script.js"></script>
 </body>
