--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
 
                 <div class="button-group">
                     <button type="submit">Hitung</button>
-                    <button type="button" id="resetLuas">Reset</button>
+                    <button type="button" id="reset-luas">Reset</button>
                 </div>
 
                 <div>
                     <label for="luas">Luas:</label>
-                    <p id="errorLuas" style="color: red;"></p>
+                    <p id="error-luas" style="color: red;"></p>
                     <input type="text" class="display" id="luas" disabled>
                 </div>
              </form>
@@ -102,12 +102,12 @@
 
                 <div class="button-group">
                     <button type="submit">Hitung</button>
-                    <button type="button" id="resetKeliling">Reset</button>
+                    <button type="button" id="reset-keliling">Reset</button>
                 </div>
 
                 <div>
                     <label for="keliling">Keliling:</label>
-                    <p id="errorKeliling" style="color: red;"></p>
+                    <p id="error-keliling" style="color: red;"></p>
                     <input type="text" class="display" id="keliling" disabled>
                 </div>
              </form>
