--- a/jajargenjang.html
+++ b/jajargenjang.html
@@ -45,23 +45,23 @@
                 </header>
 
                 <div>
-                    <label for="jg-alas">Alas:</label>
-                    <input type="number" id="jg-alas" name="alas" step="any" placeholder="Masukkan Alas Jajar Genjang">
+                    <label for="alas-jg">Alas:</label>
+                    <input type="number" id="alas-jg" name="alas" step="any" placeholder="Masukkan Alas Jajar Genjang">
                 </div>
 
                 <div>
-                    <label for="jg-tinggi">Tinggi:</label>
-                    <input type="number" id="jg-tinggi" name="tinggi" step="any" placeholder="Masukkan Tinggi Jajar Genjang">
+                    <label for="tinggi-jg">Tinggi:</label>
+                    <input type="number" id="tinggi-jg" name="tinggi" step="any" placeholder="Masukkan Tinggi Jajar Genjang">
                 </div>
 
                 <div class="button-group">
                     <button type="submit">Hitung</button>
-                    <button type="button" id="resetLuas-jg">Reset</button>
+                    <button type="button" id="reset-luas-jg">Reset</button>
                 </div>
 
                 <div>
                     <label for="luas-jg">Luas:</label>
-                    <p id="errorLuasJG" style="color: red;"></p>
+                    <p id="error-luas-jg" style="color: red;"></p>
                     <input type="text" class="display" id="luas-jg" disabled>
                 </div>
              </form>
@@ -86,23 +86,23 @@
                 </header>
 
                 <div>
-                    <label for="jg-a">Sisi a:</label>
-                    <input type="number" id="jg-a" name="sisi-a" step="any" placeholder="Masukkan Sisi a Jajar Genjang">
+                    <label for="sisi-a-jg">Sisi a:</label>
+                    <input type="number" id="sisi-a-jg" name="sisi-a" step="any" placeholder="Masukkan Sisi a Jajar Genjang">
                 </div>
 
                 <div>
-                    <label for="jg-b">Sisi b:</label>
-                    <input type="number" id="jg-b" name="sisi-b" step="any" placeholder="Masukkan Sisi b Jajar Genjang">
+                    <label for="sisi-b-jg">Sisi b:</label>
+                    <input type="number" id="sisi-b-jg" name="sisi-b" step="any" placeholder="Masukkan Sisi b Jajar Genjang">
                 </div>
 
                 <div class="button-group">
                     <button type="submit">Hitung</button>
-                    <button type="button" id="resetKeliling-jg">Reset</button>
+                    <button type="button" id="reset-keliling-jg">Reset</button>
                 </div>
 
                 <div>
                     <label for="keliling-jg">Keliling:</label>
-                    <p id="errorKelilingJG" style="color: red;"></p>
+                    <p id="error-keliling-jg" style="color: red;"></p>
                     <input type="text" class="display" id="keliling-jg" disabled>
                 </div>
              </form>
